--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,13 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-numpy = "*"
 matplotlib = "*"
 tensorflow = "*"
+scipy = "*"
+numpy = "~=1.23.1"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
+python_full_version = "3.10.13"
